--- a/Html Learning/Html-Intro.html
+++ b/Html Learning/Html-Intro.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    
+
+<head>
+
     <title>Welcome page</title>
-    
-  </head>
-  <body>
+
+</head>
+
+<body>
     <!-- This is a comment Ctrl+/ -->
     <h1>Welcome to world!</h1>
-    <p>Click here to login</p>
- </body>
+    <h2>Welcome to world!</h2>
+    <h3>Welcome to world!</h3>
+    <h4>Welcome to world!</h4>
+    <h5>Welcome to world!</h5>
+    <h6>Welcome to world!</h6>
+    <hr>
+    <hr/>
+    <p>Click here to login </p>
+    </hr>
+    <p style="color: chartreuse;"> What's is the usual spoken form of 'what is' or 'what has', <br>
+        especially when 'has' is an auxiliary verb. ... sail or sale?<br/>
+         Drag the correct answer into the box.</p>
+         <p style="color: coral;">What's is the usual spoken form of 'what is' or 'what has', <br>
+            especially when 'has' is an auxiliary verb. ... sail or sale?<br/>
+             Drag the correct answer into the box.</p>
+             <p style="color: yellow;">What's is the usual spoken form of 'what is' or 'what has', <br>
+                especially when 'has' is an auxiliary verb. ... sail or sale?<br/>
+                 Drag the correct answer into the box.</p>
+</body>
+
 </html>
