--- a/Html Learning/Html-Intro8.html
+++ b/Html Learning/Html-Intro8.html
@@ -28,13 +28,13 @@
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe> </center>
-    <center> <iframe width="560" height="315" src="C:\Users\kosridha\Downloads\index.mp4"> </iframe></center>
+    <center> <iframe width="560" height="315"  src="C:\Users\kosridha\Desktop\FrontEnd\Html Learning\index.mp4"> </iframe></center>
     <hr />
 
     <h2 style="text-align: center;">Audio Tags PRACTICE</Audio></h2>
     <center>
         <audio controls>
-            <source src="C:\Users\kosridha\Downloads\dcpoke__birds-singing-03.mp3" type="audio/mpeg">
+            <source src="./dcpoke__birds-singing-03.mp3" type="audio/mpeg">
         </audio>
     </center>
     <br />
