--- a/Html-practice/Html-CSS.html
+++ b/Html-practice/Html-CSS.html
@@ -9,14 +9,14 @@
             color: chocolate;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
-
+        
         h4 {
             font-size: small;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Html-CSS.css">
+    <link rel="stylesheet" href="Html-CSS.css"> /* h2 and h3 */
 </head>
 
 <body>
@@ -39,6 +39,11 @@
         <p class=" text-success">text-success</p>
     </div>
     <hr />
+    <!-- <div class="container-sm"></div>
+    <div class="container-md"></div>
+    <div class="container-lg"></div>
+    <div class="container-xl"></div>
+    <div class="container-xxl"></div> -->
 
     <div class="container">
         <p class="display-4">BS Contextual colors</p>
@@ -62,7 +67,7 @@
         <p class="text-muted bg-success">.text-success</p>
         <p class="text-danger bg-secondary">.text-warning</p>
     </div>
-    <hr/>
+    <hr />
 
     <div class="container">
         <p class="display-4">BS Contextual colors</p>
