--- a/Html-practice/Html-CSS.html
+++ b/Html-practice/Html-CSS.html
@@ -16,7 +16,7 @@
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Html-CSS.css"> /* h2 and h3 */
+    <link rel="stylesheet" href="Html-CSS.css">
 </head>
 
 <body>
@@ -45,7 +45,7 @@
     <div class="container-xl"></div>
     <div class="container-xxl"></div> -->
 
-    <div class="container">
+    <div class="container-xl">
         <p class="display-4">BS Contextual colors</p>
         <p class="text-info">.text-info</p>
         <p class="text-primary">.text-primary</p>
