--- a/Html-Css-webpage/WelcomePage.html
+++ b/Html-Css-webpage/WelcomePage.html
@@ -10,15 +10,15 @@
 <body>
     <div class="main">
         <div class="navbar">
-            <a href="#"><img src="../images/logo.png" class="logo"></a>
-            <button type="button"><a href="../Html-practice/Html-Form.html" target="_blank">SignUp</a></button>
+            <!-- <a href="#"><img src="../images/logo.png" class="logo"></a> -->
+            <!-- <button type="button"><a href="../Html-practice/Html-Form.html" target="_blank">SignUp</a></button> -->
         </div>
         <div class="content">
             <h4>Welcome to</h4>
-            <h1>Front<br/> End<br/>Development </h1>
-            <button type="button"><a href="https://frontendmasters.com/guides/front-end-handbook/2018/what-is-a-FD.html" target="_blank"> Take A tour</a></button>
+            <h1>Online<br/> Dairy<br/>Management </h1>
+            <!-- <button type="button"><a href="https://frontendmasters.com/guides/front-end-handbook/2018/what-is-a-FD.html" target="_blank"> Take A tour</a></button> -->
         </div>
-        <div class="side-bar">
+        <!-- <div class="side-bar">
             <img src="../images/menu.png" class="menu">
 
             <div class="social-links">
@@ -31,7 +31,7 @@
                 <img src="../images/info.png" alt="Info">
 
             </div>
-        </div>
+        </div> -->
     </div>
 
 </body>
