--- a/Html Learning/Bootstrap-intro.html
+++ b/Html Learning/Bootstrap-intro.html
@@ -2,11 +2,16 @@
 <html>
 
 <head>
-    <!-- <style>
+    <style>
         h1 {
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         }
-    </style> -->
+        h2{
+            font-style:normal;
+            font-family: 'Times New Roman', Times, serif;
+            font-display:inherit;          
+        }
+    </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 
 
@@ -15,7 +20,7 @@
 <body>
 
     <div class="container">
-        <h1 class="display-1">Bootstrap Introduction</h1>
+        <h2 class="display-1">Bootstrap Introduction</h2>
         <h1 class="display-2">Bootstrap Introduction</h1>
         <h1 class="display-3">Bootstrap Introduction</h1>
         <h1 class="display-4">Bootstrap Introduction</h1>
