--- a/Html Learning/Bootstrap-intro1.html
+++ b/Html Learning/Bootstrap-intro1.html
@@ -48,7 +48,7 @@
     
         <div class="container">
             <p class="display-4">BS Contextual colors</p>
-            <p class="text-white bg-info">.text-info</p>
+            <p class="text-white bg-info ">.text-info</p>
             <p class="text-dark bg-primary">.text-primary</p>
             <p class="text-light bg-secondary">.text-secondary</p>
             <p class="text-muted bg-success">.text-success</p>
@@ -56,6 +56,10 @@
         <div class="container">
             <p class="display-4">BS Contextual colors</p>
             <p class="text-primary border border-warning rounded ">.text-primary .border-warning</p>
+            <p class="text-info border border-danger  ">.text-primary .border-warning</p>
+        </div>
+        <div>
+            <br/><br/>
         </div>
 
         
