--- a/Html Learning/Html-Intro11.html
+++ b/Html Learning/Html-Intro11.html
@@ -14,7 +14,7 @@
 
     <p>Login</p>
     <form action="./Html-Intro10.html" method="post"> 
-        <input type="text" id="username" value="username" placeholder="Enter useraname" required>
+        <input type="text" id="username" value="username" placeholder="Enter username" required>
         <br>
         <br>
         <input type="password" id="password" value="password" placeholder="Enter password">
@@ -22,11 +22,6 @@
         <br>
         <input type="submit" id="submit" value="submit">
     </form>
-
-
-
-
-
 
 
 </body>
