--- a/Html Learning/Html-Intro2.html
+++ b/Html Learning/Html-Intro2.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-
     <title>HTML ID and CLASS</title>
     <style>
         .my-style {
@@ -28,7 +27,6 @@
             font-family: 'Courier New', Courier, monospace;
         }
     </style>
-
 </head>
 
 <body>
@@ -40,7 +38,7 @@
     <p id="pr3" style="color:blue;">This is a paragraph</p>
 
     <p class="my-style">This is style related paragraph</p>
-    <p class>This is class and attribute checking paragraph </p>
+    <p >This is class and attribute checking paragraph </p>
     <p class="my-style">This is style related paragraph</p>
     <!-- class style  -->
     <p class="my-class-style">This is a paragraph.</p>
