--- a/Html Learning/css-intro.html
+++ b/Html Learning/css-intro.html
@@ -15,19 +15,21 @@
     </head>
     
     <body>
-        <div class="col" style="background-color: olive;">
+        <div>
+        <div class="col col-md-6" style="background-color: olive;">
             <h2>Column 1</h2>
             Aliquip eu ullamco Lorem sint dolor amet pariatur consequat. Quis non aute commodo ut minim. Pariatur consequat
             elit culpa elit. Non pariatur non ex minim reprehenderit. Id laboris reprehenderit non sint velit dolore esse
             excepteur sint magna.
         </div>
-        <div class="col" style="background-color: goldenrod;">
+        <div class="col col-md-6" style="background-color: goldenrod;">
             <h2>Column 2</h2>
             Eiusmod mollit elit eu pariatur laboris fugiat. Minim ut occaecat laborum commodo non magna duis. Eu excepteur
             et anim non aute fugiat minim id sunt aute aliqua. Esse ad ea duis adipisicing incididunt consequat cillum
             reprehenderit velit consequat ipsum. Enim duis in fugiat anim non.
         </div>
-        <div class="col" style="background-color: crimson;">
+        
+        <div class="col col" style="background-color: crimson;">
             <h2>Column 3</h2>
             Sint commodo irure esse occaecat nisi sit id culpa. Voluptate commodo in ea anim mollit anim quis. Ut magna
             excepteur anim laborum pariatur officia dolor elit laborum consequat non minim eiusmod excepteur. Nulla do ea
